--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "cross-env NODE_ENV=dev tsnd -r tsconfig-paths/register --inspect --respawn --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.43.0",
@@ -22,9 +24,11 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   }
