--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
