feat: env examples

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 ############### Server ###############
-PORT=
-NODE_ENV=
-APP_SECRET=
-APP_SECRET_EXPIRATION_TIME=
+PORT= #Example: 5000
+NODE_ENV= #Example: dev
+APP_SECRET= #Example: ng-cash
+APP_SECRET_EXPIRATION_TIME= #Example: 24
 
 ############### DataBase ###############
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST= #Example: localhost
+DB_PORT= #Example: 5432
+DB_USER= #Example: ng_cash
+DB_PASS= #Example: 123456
+DB_NAME= #Example: postgres
